finally fixes scroll animation on ios!

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -150,10 +150,3 @@ a:focus {
 
 //
 //
-
-.reading-progress-bar {
-  position: sticky;
-  height: 5px;
-  top: 0;
-  background-color: #ff0000;
-}
